Don't suppress the load complete accessibility event

Get rid of code that suppresses the load complete accessibility
event when the window isn't focused. It was added when we
suppressed focus events inside a tab when that window doesn't
have focus, and that part of the change was valid - but that
logic is now implemented in browser_accessibility_manager.cc,
so this code here is redundant. Suppressing the load complete
event was a speculative fix at the time but we now believe it
was the wrong idea, it should fire even when the window is not
currently focused.

BUG=606949

Review-Url: https://codereview.chromium.org/1923663002
Cr-Commit-Position: refs/heads/master@{#390230}

Former-commit-id: 668725525cd8bdcc7eef5d5e27564a9e1c07f026